other-mpol/inject-coco-attestation-init/.chainsaw-test/exception/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: inject-coco-attestation-init-exception
spec:
  steps:
  - try:
    - apply:
        resource: {apiVersion: v1, kind: Namespace, metadata: {name: policy-exceptions}}
    - apply: {file: ../../inject-coco-attestation-init.yaml}
    - apply: {file: ../config-map-default-values.yaml}
    - apply: {file: exception.yaml}
    - sleep: {duration: 15s}
    - apply: {file: pod.yaml}
    - assert: {file: pod-unchanged.yaml}
